Change Log
Spring 2019
CS 4800
Thomas Lawing

2/11/19 - Initial post-test session
		- Initialized GitHub repository
		- Created specifications.txt
		- Created changelog.txt
		- Created roadmap.txt
		- Created README.mp
		- Created holder html files for "index", "newDatabase", "myAccount",
		"login", "createAccount", and "contact"
		- Created "exapmle.html", which uses "style.css", a file from a
		database project last semester
		- Created two sub-directories, "documents" and "web_framework", and
		moved all files into their proper locations

2/18/19 - Second session
		- Created holder html files for "search", "community", and "about"
		- Set up initial layout for "index.html"
		- Added navbar and footer to "index.html", with a little CSS
		- Linked "search.html", "about.html", "newDatabase.html",
		"community.html", and "account.html" to the navbar on "index.html"
		- Created "connection.php", the first step to linking a database to
		the actual website

2/25/19 - Third session
		- Entire session was spent working on and troubleshooting how to
		properly implement usage of the MySQL workbench on my own created html
		and php files
		- Test code was added under my apache2 folder, where I was able to
		successfully link a blank database and an a 2-column entry(name, team)
		- Tried adding a third column(position), but nothing is going into the
		column

3/11/19 - Fourth session - Post Spring Break
		- Implemented a navbar and footer on all current .html documents
		- Replaced SearchBar with a "Navigation" tab on the navbar
		- Cleaned out directories, removing test code and useless files/lines
		- Implemented a login button and accompanying CSS to "index.html",
		which will be subsequentally placed properly and paired with a sign up
		button, then pushed to all pages